--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -7,12 +7,11 @@ pipeline {
     }
     stages {
         stage('Build') {
-          def mvnHome  = tool  name: 'maven-3'  , type: 'maven' 
-          sh "${mvnHome}/bin/mvn package"
-           // steps {
-               // sh 'mvn -B -DskipTests clean package'
+        
+            steps {
+                sh 'mvn -B -DskipTests clean package'
                 
-            //}
+            }
         }
         stage('Test') {
             steps {
