--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -13,6 +13,11 @@ pipeline {
                 
             }
         }
+      stage('compile') {
+         def mvnHome  = tool  name: 'maven-3'  , type: 'maven' 
+         sh " ${mvnHome}/bin/mvn package"
+            
+        }
         stage('Test') {
             steps {
                 sh 'mvn test'
