--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -14,9 +14,11 @@ pipeline {
             }
         }
       stage('compile') {
-         def mvnHome  = tool  name: 'maven-3'  , type: 'maven' 
-         sh " ${mvnHome}/bin/mvn package"
-            
+          
+          steps  {
+               def mvnHome  = tool  name: 'maven-3'  , type: 'maven' 
+               sh " ${mvnHome}/bin/mvn package"
+          } 
         }
         stage('Test') {
             steps {
